<resources>
    <string name="app_name">English Quiz</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="time_s_up">Time\'s Up!</string>
    <string name="retry">Retry</string>
    <string name="toggle_music">Toggle Music</string>
    <string name="play">Let\'s Play</string>
    <string name="resume">Resume</string>
    <string name="close">Close</string>
    <string name="coins_icon">coin icon</string>
    <string name="setting_icon">setting icon</string>
    <string name="quit">Quit</string>
    <string name="hint_icon">hint icon</string>
    <string name="timer">timer</string>
    <string name="coin_image">coin image</string>
    <string name="settings">Settings</string>
    <string name="quizzybee">QuizzyBee</string>
    <string name="feedback_message"> Share your thoughts and rate us on the Play Store to help us grow.</string>
    <string name="thank_message">Thank you for playing QuizzyBee! 🐝✨ \n\nWe hope you had a buzzing good time testing your knowledge. \n\nKeep learning, keep shining!</string>
    <string name="congrats_message">Congratulations! You\'ve solved all the questions!</string>
    <string name="total_questions_solved"> ✅ You solved %1$d questions.</string>
    <string name="total_time_spent">⌛ You spent: %1$d hours and %2$d minutes</string>
    <string name="days_spent_message">🗓️ You completed all quizzes in %1$d days!</string>
    <string name="challenge_yourself_again">Challenge Yourself Again</string>
    <string name="accomplishment_message">🎉😇 I completed all quizzes on QuizzyBee!\nTime Spent: %1$d hours and %2$d minutes\nDays Spent: %3$d days</string>
    <string name="celebration_icon">Celebration Icon</string>
    <string name="play_image">play image</string>
    <string name="coin_icon">coin icon</string>
    <string name="music">Music</string>
    <string name="streak_message">You\'ve completed a 7-day streak! \n\n You\'ve earned 50 coins!</string>
    <string name="action">Action</string>
    <string name="result_image_description">Result Image</string>

    <!-- Perfect Score -->
    <string name="perfect_score_message">🎉 Perfect score! Amazing work! Keep shining!</string>

    <!-- Great Job -->
    <string name="great_job_message">👏 Great job! You’re moving forward with confidence!</string>

    <!-- Try Again -->
    <string name="try_again_message">💪 Don\'t give up! Practice makes perfect!</string>

    <!-- Score Percentage -->
    <string name="score_percentage_text">You scored %1$d%%</string>

    <string name="next_level">Level %1$d</string>
    <string name="pause">pause</string>
    <string name="level_text">Level %1$d</string>
    <string name="time_format">Time - %1$d</string>
    <string name="sound">Sound</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="notifications">Notifications</string>
    <string name="notification_time">Notification Time</string>
    <string name="share">Share</string>

</resources>