<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:orientation="vertical">

    <!-- AppBar with Toolbar -->
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:title="@string/quizzybee"
            app:menu="@menu/menu_main" />
    </com.google.android.material.appbar.AppBarLayout>

    <!-- Spacer for content -->
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <!-- Streak Tracker -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="16dp"
        android:background="@drawable/rounded_border"
        android:gravity="center"
        android:padding="16dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/streak_recycler_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!-- Spacer for content -->
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <!-- Bee Image -->
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/bee_play"
        android:contentDescription="@string/play_image"
        android:layout_gravity="center" />

    <!-- Start Quiz Button -->
    <Button
        android:id="@+id/btn_start_quiz"
        style="@style/Widget.Material3.Button"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:elevation="4dp"
        android:padding="16dp"
        android:text="@string/play"
        android:textSize="18sp"
        android:layout_gravity="center" />

    <!-- Spacer for content -->
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
</LinearLayout>
